<?xml version="1.0"?>
<package>
  <name>turtlesim_mb</name>
  <version>0.0.1</version>
  <description>
    turtlesim_mb is a simple simulation environment for use with move base.
  </description>
  <maintainer email="banfi.igor@windowslive.com">Igor Banfi</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_depend>mbf_abstract_core</build_depend>
  <build_depend>mbf_abstract_nav</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>mbf_costmap_nav</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>mbf_simple_nav</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libboost-thread-dev</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <run_depend>mbf_abstract_core</run_depend>
  <run_depend>mbf_abstract_nav</run_depend>
  <run_depend>mbf_costmap_core</run_depend>
  <run_depend>mbf_costmap_nav</run_depend>
  <run_depend>mbf_msgs</run_depend>
  <run_depend>mbf_simple_nav</run_depend>

</package>
